<resources>
    <string name="registrar">Registrate</string>
    <string name="confirmar_password">confirmar password</string>
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="inicio_sesion">inicio_sesion</string>
    <string name="login">login</string>
    <string name="registro">registro</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="err_msg_enter_nombre_completo">Porfavor ingrese el Nombre Completo</string>
    <string name="err_msg_enter_email">Porfavor ingrese un correo valido!</string>
    <string name="err_msg_enter_Password1">ingrese una Contraseña</string>
    <string name="err_msg_enter_Password2">confirmar Contraseña</string>
    <string name="registery_successfull">Registro Completo</string>
    <string name="img_login">img_login</string>
    <string name="Ol_pss">Olvide mi Contraseña</string>
    <string name="Ol_pss2">Ingresa tu email para enviarte tu contraseña</string>
    <string name="btn_enviar_recu">Enviar</string>
    <string name="no_tienes_usuario">No tienes usuario?</string>
    <string name="inciar_sesion">Inciar Sesion</string>

    <string name="please_wait">Please wait&#8230;</string>

    <string name="title_complete_profile">PERFIL</string>
    <string name="et_hint_mobile_number">Numero Telefonico</string>
    <string name="rb_lbl_hombre">HOMBRE</string>
    <string name="rb_lbl_mujer">MUJER</string>
    <string name="btn_lbl_guardar">Guardar Cambios</string>
    <string name="content_description">imagen</string>
    <string name="read_storage_permission_denied">Nego, el acceso al almacenamiento, si quiere cambiarlo
    debe hacerlo desde las configuraciones de la app</string>
    <string name="image_selection_failed">Fallo al seleccionar la imagen, intente de nuevo</string>
    <string name="title_activity_dash_board_activy">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_cindy_problema">MainActivity</string>
    <string name="title_activity_main12">MainActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_main_cindy">MainActivity</string>
    <string name="title_activity_main35">MainActivity</string>
    <string name="title_edit_profile">EDITAR PERFIL</string>
    <string name="title_add_product">Agregar Producto</string>
    <string name="et_hint_product_title">Producto</string>
    <string name="et_hint_product_price">Precio($)</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Cantidad</string>
    <string name="btn_lbl_submit">Submit</string>

    <string name="err_msg_enter_first_name">Por favor ingrese primer nombre.</string>
    <string name="err_msg_enter_last_name">Por favor ingrese segundo nombre.</string>
    <string name="err_msg_enter_password">Por favor ingrese la contraseña.</string>
    <string name="err_msg_enter_confirm_password">Por favor ingrese la confirmacion de contraseña.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">contraseña y confirmacion de contraseña no son las mismas.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>

    <string name="err_msg_select_product_image">Por favor seleccione una imagen para el producto.</string>
    <string name="err_msg_enter_product_title">Por favor ingrese nombre de prducto.</string>
    <string name="err_msg_enter_product_price">Por favor ingrese el precio.</string>
    <string name="err_msg_enter_product_description">Por favor ingrese la descripcion.</string>
    <string name="err_msg_enter_product_quantity">Por favor ingrese la cantidad.</string>
    <string name="product_uploaded_success_message">El producto ha sido subido exitosamente.</string>
    <string name="no_products_added_yet">No hay productos agregados</string>
    <string name="no_dashboard_item_found">No items found!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btn_msj_agregar_producto">Agregar Producto</string>
    <string name="app_name" />

    <dimen name="item_list_marginTop">16dp</dimen>
    <dimen name="item_list_padding">10dp</dimen>
    <dimen name="item_image_padding">2dp</dimen>
    <dimen name="item_image_width">80dp</dimen>
    <dimen name="item_image_height">70dp</dimen>
    <dimen name="item_image_title_price_marginStart">10dp</dimen>
    <dimen name="rv_item_name_textSize">14sp</dimen>
    <dimen name="rv_item_price_marginTop">2dp</dimen>
    <dimen name="rv_item_price_textSize">12sp</dimen>

    <string name="product_delete_success_message">El producto se ha eliminado.</string>
    <string name="delete_dialog_title">Eliminar</string>
    <string name="delete_dialog_message">Estas seguro que quieres eliminar el producto?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>

    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>

    <string name="btn_lbl_add_to_cart">ADD TO CART</string>
    <string name="success_message_item_added_to_cart">El producto fue agregado a su carrito de compras.</string>
    <string name="btn_lbl_go_to_cart">GO TO CART</string>

    <string name="title_my_cart">MI CARRITO DE COMPRAS</string>
    <string name="no_cart_item_found">No se encontro nada en el carrito!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Precio de envio</string>
    <string name="lbl_total_amount">Total</string>
    <string name="btn_lbl_checkout">Comprar</string>
    <string name="action_cart">Mi Carrito</string>

    <string name="lbl_out_of_stock">No hay en Stock</string>
    <string name="msg_item_removed_successfully">Se removio correctamente</string>


    <!--TODO Step 9: Add the string resources to the strings.xml file.-->
    <!--START-->
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>
    <!--END-->


</resources>