<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="411dp"
        android:layout_height="243dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="224dp"
            android:contentDescription="@string/img_login"
            app:srcCompat="@drawable/img_login" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="542dp"
            android:layout_height="652dp"
            android:layout_marginStart="-51dp"
            android:layout_marginTop="-230dp"
            android:contentDescription="@string/img_login"
            app:srcCompat="@drawable/img_logo" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="486dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TextView
            android:id="@+id/txt_olvidocontra"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center|center_vertical"
            android:text="@string/Ol_pss"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Ol_pss2"
            android:textColor="@android:color/tertiary_text_light" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txtEmailPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_enviar_recu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_boton"
            android:text="@string/btn_enviar_recu" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>