<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="410dp"
    android:layout_height="610dp"
    android:layout_marginVertical="110dp"
    android:layout_marginTop="125dp"
    android:background="#FAF6F6"
    tools:context=".Registro">

    <!-- simon-->

    <EditText
        android:id="@+id/email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/Password1"
        app:layout_constraintTop_toBottomOf="@+id/nombre_completo"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/Password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/Password2"
        app:layout_constraintTop_toBottomOf="@+id/email1"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/Password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/confirmar_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="360sp"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:layout_marginStart="150dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="180dp"
        android:background="@drawable/fondo_boton"
        android:padding="25dp"
        android:text="@string/registro"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/Password1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_completo" />

    <EditText
        android:id="@+id/nombre_completo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/nombre_completo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/crear_cuentar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="150dp"
        android:gravity="center"
        android:hint="@string/crear_cuenta"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-6dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="125dp"
        android:layout_height="95dp"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/nombre_completo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crear_cuentar"
        app:srcCompat="@drawable/pnghut_login_user_button"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="130dp"
        android:layout_height="19dp"
        android:gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="150dp"
        android:text="Ya tiene usuario?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="132dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="240dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-22dp"
        android:layout_marginEnd="90dp"
        android:gravity="center"
        android:padding="@dimen/clickable_text_view_padding"
        android:text="Iniciar Sesion"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>