<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- Layouts a lo loco -->
    <FrameLayout
        android:id="@+id/layout1"
        android:layout_width="411dp"
        android:layout_height="322dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="264dp"
            android:layout_marginBottom="513dp"
            android:background="@drawable/img_login"
            android:contentDescription="Image"
            />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="544dp"
            android:layout_height="652dp"
            android:layout_marginTop="-150dp"
            android:layout_marginBottom="200dp"
            android:layout_marginLeft="-50dp"
            android:contentDescription="Image"
            android:src="@drawable/img_logo" />


    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="409dp"
        android:layout_height="425dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:text="Correo Electronico" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"

            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Contraseña" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"

            />

        <TextView
            android:id="@+id/txt_pass_recu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="Olvidaste tu contraseña?" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/fondo_boton"
            android:baselineAligned="false"
            android:padding="25dp"
            android:text="@string/inciar_sesion"
            android:textColor="#FFFFFF"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/no_tienes_usuario"
            android:textSize="16sp"

            />

        <TextView
            android:id="@+id/tv_registrar"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="-19dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/registrar"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="415dp"
        android:layout_height="176dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="555dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout2">


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>